<resources>
    <string name="app_name">Maneno</string>
    <string name="create_new_account">Create a new Account</string>
    <string name="welcome_to_maneno_chat_app">Welcome to Maneno Chat App</string>
    <string name="display_name">Display Name</string>
    <string name="email">Email</string>
    <string name="create_account">Create Account</string>
    <string name="password">Password</string>
    <string name="log_out">Log Out</string>
    <string name="sign_up">Sign Up</string>
    <string name="log_in">Log In</string>
    <string name="login_auth_text">Enter a your Email Address and corresponding password</string>
    <string name="reg_auth_text">Please enter a Valid email Address and strong password</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="requests">Requests</string>
    <string name="chats">Chats</string>
    <string name="friends">Friends</string>
    <string name="db_node_users">users</string>
    <string name="default_status">Hey there I\'m Using Maneno Chat App</string>
    <string name="update_status">Update Status</string>
    <string name="change_image">Change Image</string>
    <string name="db_field_name">name</string>
    <string name="db_field_status">status</string>
    <string name="db_field_image">image</string>
    <string name="db_field_thumb_Image">thumb_image</string>
    <string name="save_changes">Save changes</string>
    <string name="users">Users</string>
    <string name="storage_profile_images">profile_images</string>
    <string name="storage_thumbs">thumbs</string>
    <string name="add_friend">Add Friend</string>
    <string name="db_node_friend_request">friend_request</string>
    <string name="received">received</string>
    <string name="db_field_request_type">request_type</string>
    <string name="sent">sent</string>
    <string name="cancel_friend_request">Cancel Friend Request</string>
    <string name="request_sent">request_sent</string>
    <string name="not_friend">not_friend</string>
    <string name="accept_friend_request">Accept Friend Request</string>
    <string name="request_received">request_received</string>
    <string name="db_node_friends">friends</string>
    <string name="unfriend">Unfriend</string>
</resources>